tests/miniJava/pos/001088_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) { } else while ( 0 ) { } } }
