tests/miniJava/neg/003531_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( class java { public static void Main ( String [ ] java ) { { } } } 0 ) { } else { } } }
